change gff comparison

--- a/pandas_hw.ipynb
+++ b/pandas_hw.ipynb
@@ -1119,9 +1119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 113,
    "id": "6753fd74",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1396,13 +1398,21 @@
        "[816 rows x 14 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "inter[(inter.start_y <= inter.end_x) & (inter.end_y >= inter.start_x)]"
+    "inter[(inter.start_y <= inter.end_x - 1) & (inter.end_y >= inter.start_x - 1)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c110407a",
+   "metadata": {},
+   "source": [
+    "Получилось **816** прочтений выровнялось на наши референсы "
    ]
   },
   {
